--- a/.project
+++ b/.project
@@ -6,14 +6,47 @@
 	</projects>
 	<buildSpec>
 		<buildCommand>
+			<name>org.eclipse.wst.common.project.facet.core.builder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
 			<name>org.eclipse.jdt.core.javabuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
 	</buildSpec>
 	<natures>
-	    <nature>com.springsource.sts.grails.core.nature</nature>
+		<nature>com.springsource.sts.grails.core.nature</nature>
 		<nature>org.eclipse.jdt.groovy.core.groovyNature</nature>
 		<nature>org.eclipse.jdt.core.javanature</nature>
+		<nature>org.eclipse.wst.common.project.facet.core.nature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>fixtures-1.0.1-grails-app-conf</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/geb-examples-edzilla/plugins/fixtures-1.0.1/grails-app/conf</locationURI>
+		</link>
+		<link>
+			<name>fixtures-1.0.1-src-groovy</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/geb-examples-edzilla/plugins/fixtures-1.0.1/src/groovy</locationURI>
+		</link>
+		<link>
+			<name>fixtures-1.0.1-src-java</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/geb-examples-edzilla/plugins/fixtures-1.0.1/src/java</locationURI>
+		</link>
+		<link>
+			<name>spock-0.5-groovy-1.7-src-java</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/geb-examples-edzilla/plugins/spock-0.5-groovy-1.7/src/java</locationURI>
+		</link>
+		<link>
+			<name>tomcat-1.3.5-src-groovy</name>
+			<type>2</type>
+			<locationURI>GRAILS_ROOT/1.3.5/projects/geb-examples-edzilla/plugins/tomcat-1.3.5/src/groovy</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
